--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-django>=2.2.6<3.3.0
-djangorestframework>=3.10.0<3.11.0
-flake8>=3.7.8<=3.8.0
+asgiref==3.2.2
+Django==3.0b1
+djangorestframework==3.10.3
+entrypoints==0.3
+flake8==3.7.8
+mccabe==0.6.1
+psycopg2==2.8.3
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pytz==2019.3
+sqlparse==0.3.0
