--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 asgiref==3.2.2
+autopep8==1.4.4
+certifi==2019.9.11
+chardet==3.0.4
+coverage==4.5.4
 Django==3.0b1
 djangorestframework==3.10.3
 entrypoints==0.3
 flake8==3.7.8
+idna==2.8
 mccabe==0.6.1
-Pillow==6.2.0
+Pillow==6.2.1
 psycopg2==2.8.3
 pycodestyle==2.5.0
 pyflakes==2.1.1
+python-coveralls==2.9.3
 pytz==2019.3
+PyYAML==5.1.2
+requests==2.22.0
+six==1.12.0
 sqlparse==0.3.0
+urllib3==1.25.6
