--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ services:
 before_script: pip install docker-compose
 
 script:
-  - docker-compose run --rm app sh -c "python manage.py manage.py test && flake8"
+  - docker-compose run app sh -c "python manage.py test && flake8"
 after_success:
   - coveralls
