--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script: pip install docker-compose
 script:
   - docker-compose run app sh -c "python manage.py test && flake8"
 after_success:
-  - coveralls
+  - docker-compose run app sh -c "coveralls"
